--- a/index.html
+++ b/index.html
@@ -1054,13 +1054,79 @@
 
     /* --- Responsive --- */
     @media (max-width: 600px) {
-      .page { padding: 12px; }
-      .library-header { flex-wrap: wrap; gap: 8px; }
+      body {
+        background: radial-gradient(circle at 20% 20%, rgba(255, 235, 205, 0.45), transparent 28%),
+                    radial-gradient(circle at 80% 0%, rgba(255, 184, 0, 0.28), transparent 26%),
+                    var(--fondo-rosa-pastel);
+      }
+      #app {
+        padding: 12px 12px 96px;
+        display: block;
+      }
+      main { display: flex; flex-direction: column; gap: 12px; }
+      .page { padding: 0; border-radius: 22px; }
+      #home.page,
+      #library.page,
+      #player.page,
+      #settings.page {
+        background: rgba(255, 255, 255, 0.88);
+        border: 1px solid #FFE0B2;
+        box-shadow: 0 14px 34px rgba(255, 149, 0, 0.15);
+        padding: 14px;
+        backdrop-filter: blur(8px);
+      }
+      .promo-banner {
+        border: 1px solid #FFE0B2;
+        background: linear-gradient(145deg, #FFF8EF, #FFE7D6);
+        padding: 18px;
+        min-height: 0;
+        border-radius: 22px;
+      }
+      .promo-text { position: relative !important; inset: auto !important; margin-top: 12px; }
+      .carousel-dots { position: relative; bottom: auto; left: auto; margin-top: 10px; }
+      .section-header h2 { margin: 10px 0 12px; font-size: 20px; }
+      .access-cards { gap: 10px; }
+      .tarjeta-acceso {
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.96), rgba(255, 243, 224, 0.9));
+        border: 1px solid #FFE0B2;
+        box-shadow: 0 12px 26px rgba(255, 149, 0, 0.14);
+        padding: 16px;
+      }
+      .icon-card { background: rgba(255, 255, 255, 0.7); border: 1px solid #FFE0B2; }
+      .library-header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 12px;
+        border: 1px solid #FFE0B2;
+        border-radius: 16px;
+        background: linear-gradient(135deg, #FFFDF8, #FFF1DE);
+        box-shadow: 0 10px 24px rgba(255, 184, 0, 0.12);
+      }
+      .library-header h1 { font-size: 26px; }
+      .tabs { position: sticky; top: 6px; background: rgba(255,255,255,0.92); padding: 8px; border-radius: 14px; }
       .documento-item { align-items: flex-start; gap: 10px; }
       .documento-item .meta { flex-wrap: wrap; }
-      .access-cards { gap: 10px; }
-      .bottom-nav { height: 68px; }
-      .nav-item { font-size: 13px; }
+      .player-toolbar { position: sticky; top: 6px; background: rgba(255,255,255,0.95); border-radius: 14px; padding: 10px; }
+      .player-body { gap: 14px; }
+      .text-container { max-height: 320px; font-size: 16px; }
+      .text-config-panel { left: 10px; right: 10px; width: auto; }
+      .settings-page { gap: 12px; }
+      .config-seccion { border-radius: 18px; }
+      .bottom-nav {
+        height: 72px;
+        border: 1px solid #FFE0B2;
+        background: rgba(255, 255, 255, 0.92);
+        backdrop-filter: blur(18px);
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+      }
+      .nav-item { font-size: 13px; color: #6b6b6b; }
+      .nav-item.active { color: var(--naranja-botones); }
+      .fab {
+        right: 16px;
+        bottom: 98px;
+        box-shadow: 0 14px 32px rgba(255, 165, 0, 0.35);
+      }
     }
 
     @media (min-width: 769px) {
@@ -1165,7 +1231,7 @@
       </form>
     </div>
   </div>
-  <div id="app">
+  <div id="app" class="app-shell">
     <main id="main-content" role="main" tabindex="-1">
       <section id="home" class="page active">
         <div class="promo-banner">
