Add mobile-first layout for player and quick actions

--- a/index.html
+++ b/index.html
@@ -398,6 +398,117 @@
     .nav-item.active { color: var(--amarillo-principal); }
     .nav-item.active::before { content: ''; position: absolute; top: 0; left: 0; right: 0; height: 3px; background: var(--amarillo-principal); }
 
+    /* --- Modo móvil dedicado --- */
+    .mobile-hero,
+    .mobile-action-grid,
+    .mobile-player-header { display: none; }
+
+    .mobile-hero {
+      background: linear-gradient(160deg, #fff7ea, #ffe6c7);
+      border: 1px solid #ffe0b2;
+      border-radius: 22px;
+      padding: 14px 16px;
+      box-shadow: 0 10px 24px rgba(255, 165, 0, 0.12);
+    }
+
+    .mobile-hero h1 {
+      font-size: 22px;
+      margin-bottom: 6px;
+    }
+
+    .mobile-hero p {
+      color: var(--texto-gris);
+      font-weight: 600;
+      line-height: 1.4;
+    }
+
+    .mobile-action-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 10px;
+      margin: 12px 0 6px;
+    }
+
+    .mobile-cta {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 12px;
+      border-radius: 14px;
+      border: 1px solid #ffe0b2;
+      background: #fffdf9;
+      font-weight: 800;
+      cursor: pointer;
+      box-shadow: 0 8px 20px rgba(255, 165, 0, 0.12);
+    }
+
+    .mobile-cta .icon {
+      width: 38px;
+      height: 38px;
+      border-radius: 12px;
+      display: grid;
+      place-items: center;
+      background: #fff3e0;
+      border: 1px solid #ffe0b2;
+      font-size: 18px;
+    }
+
+    .mobile-cta.primary {
+      background: linear-gradient(135deg, #ffb800, #ff9500);
+      color: #fff;
+      border: none;
+      box-shadow: 0 12px 28px rgba(255, 149, 0, 0.28);
+    }
+
+    .mobile-cta.primary .icon { background: rgba(255, 255, 255, 0.2); border: none; color: #fff; }
+
+    .mobile-player-header {
+      display: grid;
+      gap: 8px;
+      background: linear-gradient(180deg, #fffaf1, #fff3e0);
+      border: 1px solid #ffe0b2;
+      border-radius: 18px;
+      padding: 14px;
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.04);
+    }
+
+    .mobile-player-top { display: flex; align-items: center; justify-content: space-between; gap: 10px; }
+    .mobile-back-btn { border: none; background: #fff; border: 1px solid #ffe0b2; border-radius: 12px; padding: 10px; font-weight: 800; box-shadow: 0 6px 14px rgba(0,0,0,0.06); }
+    .eyebrow { font-size: 12px; font-weight: 800; letter-spacing: 0.08em; color: #d38b09; text-transform: uppercase; }
+    .player-subtitle { color: var(--texto-gris); }
+
+    .player-quick-actions {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 8px;
+    }
+
+    .pill-action {
+      border: 1px solid #ffe0b2;
+      background: #fff;
+      border-radius: 999px;
+      padding: 10px 14px;
+      font-weight: 800;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      cursor: pointer;
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.05);
+    }
+
+    .pill-action.primary { background: linear-gradient(135deg, #ffb800, #ff9500); color: #fff; border: none; }
+
+    .mobile-control-stack {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding: 10px;
+      background: #fffdf9;
+      border: 1px solid #ffe0b2;
+      border-radius: 16px;
+    }
+
     .fab { position: fixed; bottom: 84px; right: 24px; width: 64px; height: 64px; border-radius: 50%; border: none; background: linear-gradient(180deg, var(--amarillo-dorado), var(--naranja-botones)); color: #fff; font-size: 32px; box-shadow: 0 4px 16px rgba(255,165,0,0.4); cursor: pointer; z-index: 10; }
 
     .settings-page { padding: 16px; display: flex; flex-direction: column; gap: 14px; }
@@ -1076,11 +1187,7 @@
         backdrop-filter: blur(8px);
       }
       .promo-banner {
-        border: 1px solid #FFE0B2;
-        background: linear-gradient(145deg, #FFF8EF, #FFE7D6);
-        padding: 18px;
-        min-height: 0;
-        border-radius: 22px;
+        display: none;
       }
       .promo-text { position: relative !important; inset: auto !important; margin-top: 12px; }
       .carousel-dots { position: relative; bottom: auto; left: auto; margin-top: 10px; }
@@ -1106,8 +1213,15 @@
       .tabs { position: sticky; top: 6px; background: rgba(255,255,255,0.92); padding: 8px; border-radius: 14px; }
       .documento-item { align-items: flex-start; gap: 10px; }
       .documento-item .meta { flex-wrap: wrap; }
-      .player-toolbar { position: sticky; top: 6px; background: rgba(255,255,255,0.95); border-radius: 14px; padding: 10px; }
+      .player-toolbar { display: none; }
+      .mobile-hero,
+      .mobile-action-grid,
+      .mobile-player-header { display: block; }
       .player-body { gap: 14px; }
+      .controles { gap: 18px; }
+      .ctrl-btn { width: 44px; height: 44px; }
+      .play-btn { width: 86px; height: 86px; font-size: 30px; }
+      .footer-player { gap: 16px; justify-content: space-between; }
       .text-container { max-height: 320px; font-size: 16px; }
       .text-config-panel { left: 10px; right: 10px; width: auto; }
       .settings-page { gap: 12px; }
@@ -1324,6 +1438,28 @@
   <div id="app" class="app-shell">
     <main id="main-content" role="main" tabindex="-1">
       <section id="home" class="page active">
+        <div class="mobile-hero">
+          <h1>Escucha todo desde tu móvil</h1>
+          <p>Accesos rápidos con botones grandes y controles pensados para una mano.</p>
+          <div class="mobile-action-grid">
+            <button class="mobile-cta primary" data-action="archivo" aria-label="Subir un documento desde móvil">
+              <span class="icon">⬆️</span>
+              <span>Subir archivo</span>
+            </button>
+            <button class="mobile-cta" data-action="texto" aria-label="Pegar o escribir texto">
+              <span class="icon">✍️</span>
+              <span>Pegar texto</span>
+            </button>
+            <button class="mobile-cta" data-action="url" aria-label="Convertir enlace">
+              <span class="icon">🔗</span>
+              <span>Enlace web</span>
+            </button>
+            <button class="mobile-cta" data-action="escanear" aria-label="Escanear documento con cámara">
+              <span class="icon">📷</span>
+              <span>Escanear</span>
+            </button>
+          </div>
+        </div>
         <div class="promo-banner">
           <svg class="promo-illustration" viewBox="0 0 320 180">
             <defs>
@@ -1430,7 +1566,7 @@
       <section id="player" class="page">
         <header class="player-toolbar">
           <button class="icon-btn" data-action="back">←</button>
-          <button class="icon-btn" id="open-text-config" title="Configuración de lectura" aria-label="Abrir configuración de lectura">⚙️</button>
+          <button class="icon-btn text-config-trigger" id="open-text-config" title="Configuración de lectura" aria-label="Abrir configuración de lectura">⚙️</button>
           <button class="icon-btn" title="Menú del documento" aria-label="Abrir menú del documento">≡</button>
           <button class="icon-btn" title="Tamaño">Aa</button>
           <button class="icon-btn" title="IA">🔁</button>
@@ -1438,33 +1574,47 @@
           <button class="icon-btn" title="Opciones">⋯</button>
         </header>
         <div class="player-body">
-          <h3 id="player-title">Documento</h3>
+          <div class="mobile-player-header">
+            <div class="mobile-player-top">
+              <button class="mobile-back-btn" data-action="back" aria-label="Volver">←</button>
+              <span class="eyebrow">Modo móvil</span>
+            </div>
+            <h3 id="player-title">Documento</h3>
+            <p class="player-subtitle">Controles pensados para una sola mano y accesos rápidos.</p>
+            <div class="player-quick-actions">
+              <button class="pill-action text-config-trigger" type="button">Aa Lectura</button>
+              <button class="pill-action" type="button" id="mobile-speed-trigger">⚡ Velocidad</button>
+              <button class="pill-action" type="button" id="mobile-voice-trigger">🔊 Voz</button>
+            </div>
+          </div>
           <div class="text-reader-wrapper">
             <div class="text-container" id="player-text" aria-live="polite"></div>
           </div>
-          <div class="progress-area">
-            <div class="time start" id="time-start">0:00</div>
-            <div class="time end" id="time-end">0:00</div>
-            <div class="progress-bar" id="progress-bar">
-              <div class="progress" id="progress"></div>
-              <div class="thumb" id="progress-thumb"></div>
-            </div>
-          </div>
-          <div class="controles">
-            <button class="ctrl-btn" id="backward">⏪10</button>
-            <button class="play-btn" id="play-pause">▶️</button>
-            <button class="ctrl-btn" id="forward">⏩10</button>
-          </div>
-          <div class="footer-player">
-            <div class="speed-control">
-              <button id="speed-btn">1.0 x</button>
-              <small>Velocidad</small>
-            </div>
-            <div class="voice-control" id="voice-btn">
-              <div class="avatar">
-                <img class="voice-avatar" src="https://i.pravatar.cc/256?img=32" alt="Sasha" onerror="this.src='https://placehold.co/64x64'" />
+          <div class="mobile-control-stack">
+            <div class="progress-area">
+              <div class="time start" id="time-start">0:00</div>
+              <div class="time end" id="time-end">0:00</div>
+              <div class="progress-bar" id="progress-bar">
+                <div class="progress" id="progress"></div>
+                <div class="thumb" id="progress-thumb"></div>
               </div>
-              <small>Sasha</small>
+            </div>
+            <div class="controles">
+              <button class="ctrl-btn" id="backward">⏪10</button>
+              <button class="play-btn" id="play-pause">▶️</button>
+              <button class="ctrl-btn" id="forward">⏩10</button>
+            </div>
+            <div class="footer-player">
+              <div class="speed-control">
+                <button id="speed-btn">1.0 x</button>
+                <small>Velocidad</small>
+              </div>
+              <div class="voice-control" id="voice-btn">
+                <div class="avatar">
+                  <img class="voice-avatar" src="https://i.pravatar.cc/256?img=32" alt="Sasha" onerror="this.src='https://placeholder.co/64x64'" />
+                </div>
+                <small>Sasha</small>
+              </div>
             </div>
           </div>
         </div>
@@ -3873,7 +4023,9 @@
     const speedButtons = document.getElementById('speed-buttons');
     const voiceList = document.getElementById('voice-list');
     const saveVoiceBtn = document.getElementById('save-voice');
-    const playerBackBtn = document.querySelector('[data-action="back"]');
+    const playerBackButtons = document.querySelectorAll('[data-action="back"]');
+    const mobileSpeedTrigger = document.getElementById('mobile-speed-trigger');
+    const mobileVoiceTrigger = document.getElementById('mobile-voice-trigger');
     const fab = document.getElementById('add-btn');
     const fileInput = document.getElementById('file-input');
     const imageInput = document.getElementById('image-input');
@@ -3890,7 +4042,7 @@
     const progressThumb = document.getElementById('progress-thumb');
     const timeStart = document.getElementById('time-start');
     const timeEnd = document.getElementById('time-end');
-    const openTextConfigBtn = document.getElementById('open-text-config');
+    const openTextConfigTriggers = document.querySelectorAll('.text-config-trigger');
     const textConfigOverlay = document.getElementById('text-config-overlay');
     const textConfigPanel = document.getElementById('text-config-panel');
     const closeTextConfigBtn = document.getElementById('close-text-config');
@@ -6605,6 +6757,7 @@
       renderVoices();
       openModal(voiceModal);
     });
+    mobileVoiceTrigger?.addEventListener('click', () => voiceBtn?.click());
 
     saveVoiceBtn.addEventListener('click', () => {
       if (documentoActivo) updateDocumento(documentoActivo.id, { vozSeleccionada });
@@ -6640,6 +6793,7 @@
       setSpeed(velocidadActual);
       openModal(speedModal);
     });
+    mobileSpeedTrigger?.addEventListener('click', () => speedBtn?.click());
     speedSlider.addEventListener('input', (e) => setSpeed(e.target.value));
     renderSpeedButtons();
 
@@ -7016,9 +7170,11 @@
       isDragging = false;
     });
 
-    playerBackBtn.addEventListener('click', () => {
-      detenerLectura();
-      switchPage('library');
+    playerBackButtons.forEach((btn) => {
+      btn.addEventListener('click', () => {
+        detenerLectura();
+        switchPage('library');
+      });
     });
 
     function openTextConfigPanel() {
@@ -7040,7 +7196,7 @@
       dockTextConfigBtn.textContent = dockedConfigPanel ? 'Flotar' : 'Fijar';
     }
 
-    openTextConfigBtn?.addEventListener('click', openTextConfigPanel);
+    openTextConfigTriggers.forEach((btn) => btn.addEventListener('click', openTextConfigPanel));
     closeTextConfigBtn?.addEventListener('click', closeTextConfigPanel);
     textConfigOverlay?.addEventListener('click', closeTextConfigPanel);
     dockTextConfigBtn?.addEventListener('click', toggleDockConfigPanel);
